# init
AC_INIT([cenigma], [0.1], [gattschardo])
# ignore some gnu standards
AC_CONFIG_SRCDIR([src/enigma/enigma.c])
AC_CONFIG_AUX_DIR([autoconf])
# automake
AM_INIT_AUTOMAKE([foreign])
AM_GNU_GETTEXT
AM_SILENT_RULES
AM_DEFAULT_VERBOSITY=0
# checks for programs
AC_PROG_CC
# config files
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
